test/spec_vectors/select/fail/module_4.wat
(module (type $t (func)) (func $type-ref-implicit (param $r (ref $t)) (drop (select (local.get $r) (local.get $r) (i32.const 1)))))